--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "identity-obj-proxy": "3.0.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-datepicker": "^3.1.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
@@ -29,6 +30,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-redux": "^7.1.9",
